<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- App Details -->
    <string name="app_name">Tic Tac Toe Game</string>
    <string name="title">Tic Tac Toe Game</string>
    <string name="app_icon">App Icon</string>
    <string name="action_settings">Settings</string>
    
    <!-- Textfields -->
    <string name="computer_player">Der Computer ist an der Reihe</string>
    <string name="you_player">Sie sind an der Reihe</string>
    <string name="computer">Gegen Computer\n spielen</string>
    <string name="first_name_player">Name des ersten Spielers eingeben:</string>
    <string name="second_name_player">Name des zweiten Spielers eingeben:</string>
    <string name="player">ist an der Reihe</string>
    
    <!-- Buttons -->
    <string name="new_game">Neues Spiel</string>
    <string name="cancel">Abbrechen</string>
    <string name="exit">Beenden</string>
    <string name="start">Spiel starten</string>
    <string name="startLogin">Start</string>
 
</resources>
